package dto

type UpdateWithdrawalStatusDTO struct {
	EventId    string
	TrackingId string
	IsSuccess  bool
}
